--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="Description" content="Syntax Error: Webdesign" />
     <meta
       name="Syntax Error"
       content="Syntax Error: Mateusz Sułecki - webdev"
